final tests for VehicleImpl #50